# practica3

./: README.md
ej_fecha/: client.py  server.py
ej_tirob/: client.js  client.py  package-lock.json  server.py
ej_tirob/C++/: CMakeLists.txt  client.cpp  tiro.proto
protos/: fecha.proto  fecha_pb2.py  fecha_pb2_grpc.py  tiro_grpc_pb.js  tiro_pb.js  tiro_pb2.py  tiro_pb2_grpc.py
